src/z80asm/z80asm2/t/30-directive/expected/binary_22.txt
% z88dk-z80asm -v -dump-after-directives t/30-directive//input/binary_22.asm
Assembling t/30-directive/input/binary_22.asm...
t/30-directive/input/binary_22.asm:1:27: error: Unexpected token after BINARY: extra
    binary file-not-found.bin extra
                              ^
t/30-directive/input/binary_22.asm:1:8: error: File not found: file-not-found.bin
    binary file-not-found.bin extra
           ^
